--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "collins german-english to anki deck",
-    "version": "1.1",
+    "version": "1.0.1",
     "description": "convert to anki note",
     "content_scripts": [
         {
@@ -19,6 +19,6 @@
         }
     ],
     "permissions": [
-        "storage", "tabs"
+        "storage"
     ]
 }
